feat: 支持查询学生已报名赛事
